--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -3,9 +3,10 @@
     <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta charset="utf-8">
-      <title>TDM</title>
+      <title>Drill4J</title>
       <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <base href="/">
     </head>
     <body>
       <div id="app" style="width: 100%; height: 100%"></div>
